# wrecv

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
src/: dns.rs  error.rs  lib.rs  main.rs  version.rs
src/cli/: args.rs  fetch.rs  logging.rs  lookup.rs  mod.rs
src/client/: common.rs  cookie.rs  curl.rs  mod.rs  pool.rs
src/http/: common.rs  mod.rs  parse.rs
src/string/: escape.rs  mod.rs
tests/: client.rs
tests/common/: ftp.rs  http.rs  mod.rs
